Manage preview notice from admin
