# src/server/entry.ts
@@ -240,6 +240,7 @@ import newsletter_unsubscribe_get_220 from "./api/newsletter/unsubscribe/GET";
 import og_get_221 from "./api/og/GET";
 import settings_rates_get_222 from "./api/settings/rates/GET";
 import settings_social_get_223 from "./api/settings/social/GET";
+import settings_preview_get from "./api/settings/preview/GET";
 import test_email_post_224 from "./api/test-email/POST";
 import users_2fa_setup_post_225 from "./api/users/2fa/setup/POST";
 import users_2fa_verify_post_226 from "./api/users/2fa/verify/POST";
@@ -687,6 +688,7 @@ app.get("/api/newsletter/unsubscribe", newsletter_unsubscribe_get_220);
 app.get("/api/og", og_get_221);
 app.get("/api/settings/rates", settings_rates_get_222);
 app.get("/api/settings/social", settings_social_get_223);
+app.get("/api/settings/preview", settings_preview_get);
 app.post("/api/test-email", test_email_post_224);
 app.post("/api/users/2fa/setup", users_2fa_setup_post_225);
 app.post("/api/users/2fa/verify", users_2fa_verify_post_226);
